<resources>
    <string name="app_name">DicodingEvent</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="back">Back</string>
    <string name="event_cover">Event Cover</string>
    <string name="event_name">Event Name</string>
    <string name="organized_by_owner_name">Organized by: Owner Name</string>
    <string name="event_time_begin_time">Event Time: Begin Time</string>
    <string name="remaining_quota_x">Remaining Quota: X</string>
    <string name="event_description">Event Description</string>
    <string name="open_event_link">Open Event Link</string>
    <string name="event_title">Event Title</string>
    <string name="finished_events">Finished Events</string>
    <string name="dicoding_event">Dicoding Event</string>
    <string name="upcoming_event">Upcoming Event</string>
    <string name="finished_event">Finished Event</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="home">Home</string>
    <string name="upcoming">Upcoming</string>
    <string name="completed">Completed</string>
    <string name="desc">desc</string>
    <string name="city_name">City Name</string>
    <string name="error">No events yet</string>
    <string name="no_results_found">No results found</string>
    <string name="remaining_quota">Remaining Quota: %1$s</string>
    <string name="starting_from">Starting From: %1$s</string>
    <string name="add_to_favorites">add</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmark_event">Bookmark Event</string>
    <string name="setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="notification">Notification</string>
</resources>