<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/upcomingFragment"
        android:icon="@drawable/ic_upcoming"
        android:title="@string/upcoming" />
    <item
        android:id="@+id/finishedFragment"
        android:icon="@drawable/ic_completed"
        android:title="@string/completed" />
    <item
        android:id="@+id/bookmarkFragment"
        android:icon="@drawable/ic_loved"
        android:title="@string/bookmark"/>
    <item
        android:id="@+id/settingFragment"
        android:icon="@drawable/ic_setting"
        android:title="@string/setting"/>
</menu>