<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">


        <ImageView
            android:id="@+id/imgEvent"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/desc" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/imgEvent"
            android:layout_marginStart="8dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tvEventName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_name"
                android:textColor="?attr/colorOnBackground"
                android:textSize="16sp"
                android:textStyle="bold"
                android:ellipsize="end"
                android:maxLines="1" />


            <TextView
                android:id="@+id/tvOwnerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/organized_by_owner_name"
                android:textColor="?attr/colorOnBackground"
                android:textSize="14sp"
                android:ellipsize="end"
                android:maxLines="1" />


            <TextView
                android:id="@+id/tvCityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city_name"
                android:textColor="?attr/colorOnBackground"
                android:textSize="14sp"
                android:ellipsize="end"
                android:maxLines="1" />
        </LinearLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>
